<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings">

    <ScrollView
        android:id="@+id/settings_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentContainerSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/profilePic_settings1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profilepic" />

            <Button
                android:id="@+id/changePicBTN_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginLeft="170dp"
                android:onClick="changePicture"
                android:text="@string/changePicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePic_settings1" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePicBTN_settings1" />

            <EditText
                android:id="@+id/nameTXT_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/name_here"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toBottomOf="@+id/changePicBTN_settings1" />

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/username"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

            <EditText
                android:id="@+id/usernameTXT_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:ems="10"
                android:hint="@string/username_here"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/usernameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nameTXT_settings1" />

            <TextView
                android:id="@+id/birthdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/birthday"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

            <EditText
                android:id="@+id/birtdayPicker_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/choose_birthday"
                android:inputType="date"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/birthdayLabel"
                app:layout_constraintTop_toBottomOf="@+id/usernameTXT_settings1" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthdayLabel" />

            <EditText
                android:id="@+id/email_setrtings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/emailLabel"
                app:layout_constraintTop_toBottomOf="@+id/birtdayPicker_settings1" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/hint_password"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

            <EditText
                android:id="@+id/changePassword_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/changePassword"
                android:inputType="textPassword"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/email_setrtings1" />

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/country_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <EditText
                android:id="@+id/location_settings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/choose_location"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/countryLabel"
                app:layout_constraintTop_toBottomOf="@+id/changePassword_settings1" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="update"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_settings1"
                app:srcCompat="@drawable/saveupdates" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="126dp"
                android:layout_height="82dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="210dp"
                android:layout_marginRight="210dp"
                android:onClick="delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_settings1"
                app:srcCompat="@drawable/deleteaccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>